--- a/category.html
+++ b/category.html
@@ -19,7 +19,7 @@
           <h2>Season</h2>
           <ol>
             <li id="seasonsummer"><a href="productlist.html">Summer</a></li>
-            <li id="seasonautumn"><a href="productlist.html">Autumn</a></li>
+            <li id="seasonautumn"><a href="productlist.html">fall</a></li>
             <li id="seasonwinter"><a href="productlist.html">Winter</a></li>
             <li id="seasonspring"><a href="productlist.html">Spring</a></li>
           </ol>
