--- a/product.html
+++ b/product.html
@@ -22,7 +22,7 @@
         <li id="productnameol"></li>
       </ol>
       <img class="productimage"
-         height="930px"> 
+         height="930" alt=""> 
       <section class="purchaseBox">
         <h3 ></h3>
         <p class="smallinfo" > | </p>
