--- a/product.html
+++ b/product.html
@@ -28,7 +28,7 @@
         <p class="smallinfo" > | </p>
         <form>
           <label
-            >Choose a Size
+            >Choose a size
             <select name="size">
               <option>S</option>
               <option>M</option>
